Move use of Sys_ParseProtocolUri to the argv loop and append to commandLine instead of calling Com_QueueEvent directly. For security reasons, require that a "--uri" argument is before the protocol URI, so that an arbitrary URI from a browser can easily be ignored (this is important if the registry keys are configured even though PROTOCOL_HANDLER is undefined). Ignore any extraneous arguments after the protocol URI.

--- a/misc/nsis/ioquake3.nsi.in
+++ b/misc/nsis/ioquake3.nsi.in
@@ -138,7 +138,7 @@ Section "Protocol Handler" ProtocolHandler
   WriteRegStr SHCTX "Software\Classes\quake3" "CustomUrlArguments" '"%1"'
   WriteRegStr SHCTX "Software\Classes\quake3" "URL Protocol" ""
   WriteRegStr SHCTX "Software\Classes\quake3\DefaultIcon" "" "$INSTDIR\ioquake3.x86.exe,0"
-  WriteRegStr SHCTX "Software\Classes\quake3\shell\open\command" "" '"$INSTDIR\ioquake3.x86.exe" "%1"'
+  WriteRegStr SHCTX "Software\Classes\quake3\shell\open\command" "" '"$INSTDIR\ioquake3.x86.exe" --uri "%1"'
 
 SectionEnd
 
